--- a/config/database.yml
+++ b/config/database.yml
@@ -35,7 +35,7 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: wathclist_production
+  database: wathclist_development
   pool: 5
   username: root
   password:
